# Obould-lang

./: .gitignore  CMakeLists.txt  README.md
src/ast/: ASTAccept.cpp  ASTCore.h  ASTDeclarations.h  ASTExpressions.h  ASTNode.h  ASTStatements.h  ASTTypes.h  ASTVisitor.h  ArrayAccessExpression.h  ArrayType.h  AssignmentStatement.h  BinaryExpression.h  BooleanLiteral.h  CaseLabel.h  ConstantDeclaration.h  ConstantDeclarations.h  DeclarationsBlock.h  DereferenceExpression.h  DoWhileStatement.h  Expression.h  ForStatement.h  IdentifierExpression.h  IdentifierType.h  IfStatement.h  Import.h  IntegerLiteral.h  MemberAccessExpression.h  Module.h  Nil.h  OpenArrayType.h  PointerType.h  ProcedureCall.h  ProcedureDeclaration.h  ProcedureParameter.h  ProcedureType.h  RealLiteral.h  RecordType.h  Statement.h  StatementsBlock.h  StringLiteral.h  (+10 more)
src/info/: ASTPrintVisitor.cpp  ASTPrintVisitor.h
tests/manual/: ASTDemo.cpp
